working first junit test